--- a/code (1).html
+++ b/code (1).html
@@ -1,262 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Grow a Garden - Sell Price Calculator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <style>
-    /* Reset & base */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f172a, #1e293b);
-      color: #e0e7ff;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 40px 16px;
-      scroll-behavior: smooth;
-    }
-    /* Container with gradient blur and layering */
-    .container {
-      background: rgba(24, 39, 69, 0.85);
-      border-radius: 18px;
-      box-shadow: 0 12px 32px rgba(49, 66, 129, 0.8);
-      max-width: 520px;
-      width: 100%;
-      padding: 40px 36px 48px 36px;
-      display: flex;
-      flex-direction: column;
-      gap: 28px;
-      border: 1px solid rgba(139, 92, 246, 0.3);
-      backdrop-filter: saturate(180%) blur(28px);
-      -webkit-backdrop-filter: saturate(180%) blur(28px);
-    }
-    /* Heading */
-    header {
-      text-align: center;
-      margin-bottom: 12px;
-    }
-    h1 {
-      font-weight: 900;
-      font-size: 2.75rem;
-      margin-bottom: 4px;
-      line-height: 1.1;
-      color: #a78bfa;
-      text-shadow: 0 0 12px rgba(167, 139, 250, 0.6);
-      user-select: none;
-    }
-    p.subtitle {
-      font-weight: 500;
-      font-size: 1rem;
-      color: #c7d2fe;
-      margin-top: 0;
-      letter-spacing: 0.04em;
-      font-style: italic;
-      user-select: none;
-    }
-    /* Label styling */
-    label, legend {
-      font-weight: 700;
-      font-size: 1.1rem;
-      color: #e0e7ff;
-      margin-bottom: 8px;
-      user-select: none;
-      display: block;
-    }
-    /* Fruit selector */
-    select {
-      font-size: 1rem;
-      padding: 14px 16px;
-      border-radius: 14px;
-      border: none;
-      width: 100%;
-      background-color: #312e81;
-      color: #e0e7ff;
-      box-shadow: inset 0 0 14px rgba(107, 99, 255, 0.5);
-      transition: box-shadow 0.3s ease, background-color 0.3s ease;
-      cursor: pointer;
-    }
-    select:hover, select:focus {
-      box-shadow: 0 0 18px #8b5cf6;
-      outline: none;
-      background-color: #3f3cbb;
-    }
-    /* Modifiers fieldset */
-    fieldset {
-      border: none;
-      padding: 0;
-    }
-    /* Modifier container grid */
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Grow a Garden - Sell Price Calculator</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(135deg, #2c3e50, #4ca1af);
+    color: #f0f4f8;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    padding: 48px 16px;
+  }
+
+  .container {
+    background: rgba(0, 0, 0, 0.65);
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+    padding: 32px 36px 40px;
+    max-width: 520px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  h1 {
+    margin: 0 0 4px 0;
+    font-weight: 700;
+    font-size: 2.5rem;
+    text-align: center;
+    color: #a3cef1;
+    text-shadow: 0 0 12px #4ca1af;
+    user-select: none;
+  }
+
+  p.subtitle {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    color: #d6eefa;
+    font-style: italic;
+    user-select: none;
+  }
+
+  label {
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 6px;
+    display: block;
+  }
+
+  select {
+    width: 100%;
+    padding: 12px 14px;
+    font-size: 1rem;
+    border-radius: 12px;
+    border: none;
+    background-color: #1a2a38;
+    color: #e0eaff;
+    box-shadow: inset 0 0 10px rgba(76, 161, 175, 0.7);
+    cursor: pointer;
+    transition: box-shadow 0.3s ease;
+  }
+
+  select:hover, select:focus {
+    box-shadow: 0 0 16px #4ca1af;
+    outline: none;
+  }
+
+  fieldset {
+    border: none;
+    padding: 0;
+  }
+
+  legend {
+    font-weight: 700;
+    font-size: 1.15rem;
+    margin-bottom: 12px;
+  }
+
+  .modifiers {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    gap: 12px 16px;
+    max-height: 300px;
+    overflow-y: auto;
+    padding-right: 8px;
+  }
+
+  /* Scrollbar */
+  .modifiers::-webkit-scrollbar {
+    width: 6px;
+  }
+  .modifiers::-webkit-scrollbar-thumb {
+    background-color: #4ca1af;
+    border-radius: 6px;
+  }
+  .modifiers::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* Custom styled checkbox label */
+  .modifier-label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    padding: 8px 14px;
+    border-radius: 12px;
+    font-weight: 600;
+    font-size: 0.95rem;
+    background-color: #1a2a38;
+    color: #b1d5e0;
+    box-shadow: 0 0 10px rgba(76, 161, 175, 0.4);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+    user-select: none;
+  }
+
+  .modifier-label:hover {
+    background-color: #317aab;
+    color: #e0f1f9;
+    box-shadow: 0 0 16px #4ca1af;
+  }
+
+  .modifier-label input[type=checkbox] {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    border-radius: 6px;
+    border: 2px solid #5dade2;
+    background-color: #12314b;
+    position: relative;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    transition: background-color 0.3s, border-color 0.3s;
+  }
+
+  .modifier-label input[type=checkbox]:checked {
+    background: linear-gradient(135deg, #4ca1af, #1a91a7);
+    border-color: #a8e6ef;
+  }
+
+  .modifier-label input[type=checkbox]:checked::after {
+    content: "✓";
+    position: absolute;
+    top: 1px;
+    left: 3px;
+    font-size: 18px;
+    color: #d7f4fa;
+  }
+
+  .modifier-label input[type=checkbox]:focus-visible {
+    outline-offset: 2px;
+    outline: 2px solid #4ca1af;
+  }
+
+  button {
+    background-image: linear-gradient(135deg,#3d8eba,#67c8ce);
+    border: none;
+    color: white;
+    font-weight: 700;
+    font-size: 1.25rem;
+    padding: 14px 0;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(60,175,200,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    user-select: none;
+    transition: box-shadow 0.3s, transform 0.2s;
+  }
+
+  button:hover {
+    box-shadow: 0 14px 28px rgba(60,175,200,1);
+    transform: translateY(-2px);
+  }
+
+  button:active {
+    transform: translateY(1px);
+    box-shadow: 0 6px 14px rgba(60,175,200,0.7);
+  }
+
+  .material-icons {
+    font-size: 26px;
+  }
+
+  .result {
+    margin-top: 20px;
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-align: center;
+    color: #a3f7ff;
+    user-select: text;
+    min-height: 48px;
+    background-color: rgba(28, 48, 66, 0.75);
+    border-radius: 14px;
+    padding: 12px 20px;
+    box-shadow: 0 0 20px rgba(76, 161, 175, 0.6);
+    word-break: break-word;
+  }
+
+  @media (max-width: 480px) {
     .modifiers {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 14px 18px;
-      max-height: 320px;
-      overflow-y: auto;
-      padding-right: 8px;
+      grid-template-columns: 1fr 1fr;
     }
-    /* Scrollbar styling */
-    .modifiers::-webkit-scrollbar {
-      width: 6px;
+  }
+
+  @media (max-width: 320px) {
+    .modifiers {
+      grid-template-columns: 1fr;
     }
-    .modifiers::-webkit-scrollbar-thumb {
-      background-color: #a78bfa;
-      border-radius: 6px;
-      border: 1px solid transparent;
-    }
-    .modifiers::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    /* Custom checkbox style using hidden input + styled span */
-    .modifier-label {
-      user-select: none;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 1rem;
-      color: #dbeafe;
-      border-radius: 14px;
-      padding: 10px 16px;
-      background: #4338ca;
-      box-shadow: 0 0 12px rgba(139, 92, 246, 0.35);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
-      position: relative;
-      user-select: none;
-    }
-    .modifier-label:hover {
-      background-color: #5b4ade;
-      box-shadow: 0 0 20px #a78bfa;
-      color: #eef2ff;
-    }
-    /* Hide the default checkbox */
-    .modifier-label input[type="checkbox"] {
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      margin: 0;
-      width: 24px;
-      height: 24px;
-      border-radius: 6px;
-      border: 2.5px solid #c7d2fe;
-      cursor: pointer;
-      position: relative;
-      transition: background-color 0.3s ease, border-color 0.3s ease;
-      flex-shrink: 0;
-      outline-offset: 2px;
-    }
-    /* Custom checkmark */
-    .modifier-label input[type="checkbox"]:checked {
-      background: linear-gradient(135deg, #8b5cf6, #06b6d4);
-      border-color: #a5f3fc;
-    }
-    .modifier-label input[type="checkbox"]:checked::before {
-      content: "✔";
-      position: absolute;
-      top: 1px;
-      left: 4px;
-      font-size: 1.4rem;
-      color: #e0e7ff;
-      user-select: none;
-    }
-    .modifier-label input[type="checkbox"]:focus-visible {
-      outline: 3px solid #a78bfa;
-      outline-offset: 2px;
-    }
-    /* Button */
-    button {
-      background-image: linear-gradient(135deg, #8b5cf6 0%, #06b6d4 100%);
-      border: none;
-      color: #f8fafc;
-      font-size: 1.25rem;
-      font-weight: 800;
-      padding: 16px 0;
-      border-radius: 20px;
-      cursor: pointer;
-      box-shadow: 0 12px 30px rgba(107, 99, 255, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 12px;
-      transition: box-shadow 0.3s ease, transform 0.2s ease;
-      user-select: none;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.3);
-    }
-    button:hover {
-      box-shadow: 0 18px 36px rgba(107, 99, 255, 0.8);
-      transform: translateY(-3px);
-    }
-    button:active {
-      transform: translateY(1px);
-      box-shadow: 0 6px 15px rgba(107, 99, 255, 0.6);
-    }
-    /* Material Icons styling */
-    .material-icons {
-      font-size: 28px;
-      line-height: 1;
-    }
-    /* Result area */
-    .result {
-      margin-top: 16px;
-      font-size: 1.4rem;
-      font-weight: 900;
-      text-align: center;
-      color: #d8b4fe;
-      min-height: 40px;
-      user-select: text;
-      word-break: break-word;
-      text-shadow: 0 0 5px rgba(216,180,254,0.7);
-    }
-    /* Tooltip / Helper text */
-    .helper-text {
-      font-size: 0.85rem;
-      color: #a5b4fc;
-      text-align: center;
-      font-style: italic;
-      margin-top: -16px;
-      margin-bottom: 20px;
-      user-select: none;
-    }
-    /* Responsive */
-    @media (max-width: 560px) {
-      .container {
-        max-width: 100%;
-        padding: 28px 24px 32px 24px;
-      }
-      .modifiers {
-        grid-template-columns: 1fr 1fr;
-      }
-      .material-icons {
-        font-size: 24px;
-      }
-      button {
-        font-size: 1.1rem;
-      }
-    }
-    @media (max-width: 400px) {
-      .modifiers {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
   <main class="container" role="main" aria-label="Grow a Garden Sell Price Calculator">
-    <header>
-      <h1>Grow a Garden</h1>
-      <p class="subtitle">Calculate fruit sell price with modifiers</p>
-    </header>
+    <h1>Grow a Garden</h1>
+    <p class="subtitle">Select your fruit and modifiers, then calculate the sell price.</p>
 
     <label for="fruit-select">Select a Fruit</label>
-    <select id="fruit-select" aria-describedby="fruit-desc" title="Select a fruit to calculate its sell price">
+    <select id="fruit-select" aria-describedby="fruit-desc" title="Select a fruit">
+      <option value="" disabled selected>Select a fruit...</option>
       <option value="carrot">🥕 Carrot</option>
       <option value="strawberry">🍓 Strawberry</option>
       <option value="blueberry">🫐 Blueberry</option>
@@ -279,11 +254,11 @@
       <option value="beanstalk">🌱 Beanstalk</option>
       <option value="emberLily">🌸 Ember Lily</option>
     </select>
-    <p id="fruit-desc" class="helper-text">Choose your fruit from the list above to start.</p>
+    <p id="fruit-desc" class="helper-text">Choose your fruit to calculate its final sell price.</p>
 
     <fieldset>
       <legend>Select Modifiers</legend>
-      <div class="modifiers" role="group" aria-label="Fruit Modifiers">
+      <div class="modifiers" role="group" aria-label="Modifiers list">
         <label class="modifier-label" for="wet">
           <input type="checkbox" id="wet" value="2" /> Wet (2×)
         </label>
@@ -344,51 +319,83 @@
       </div>
     </fieldset>
 
-    <button id="calculateBtn" aria-label="Calculate sell price">
+    <button type="button" id="calculateBtn" aria-label="Calculate sell price">
       <span class="material-icons" aria-hidden="true">calculate</span>
       Calculate Sell Price
     </button>
 
-    <div class="result" id="result" role="status" aria-live="polite"></div>
+    <div id="result" class="result" aria-live="polite" role="status"></div>
   </main>
 
   <script>
-    const basePrices = {
-      carrot: 10,
-      strawberry: 50,
-      blueberry: 400,
-      orangeTulip: 600,
-      tomato: 800,
-      corn: 1300,
-      daffodil: 1000,
-      watermelon: 2500,
-      pumpkin: 3000,
-      apple: 3250,
-      bamboo: 4000,
-      coconut: 6000,
-      cactus: 15000,
-      dragonFruit: 50000,
-      mango: 100000,
-      grape: 850000,
-      mushroom: 150000,
-      pepper: 1000000,
-      cacao: 2500000,
-      beanstalk: 10000000,
-      emberLily: 15000000
-    };
+    (() => {
+      const basePrices = {
+        carrot: 10,
+        strawberry: 50,
+        blueberry: 400,
+        orangeTulip: 600,
+        tomato: 800,
+        corn: 1300,
+        daffodil: 1000,
+        watermelon: 2500,
+        pumpkin: 3000,
+        apple: 3250,
+        bamboo: 4000,
+        coconut: 6000,
+        cactus: 15000,
+        dragonFruit: 50000,
+        mango: 100000,
+        grape: 850000,
+        mushroom: 150000,
+        pepper: 1000000,
+        cacao: 2500000,
+        beanstalk: 10000000,
+        emberLily: 15000000
+      };
 
-    const calculateBtn = document.getElementById("calculateBtn");
-    const fruitSelect = document.getElementById("fruit-select");
-    const resultDiv = document.getElementById("result");
+      const calculateBtn = document.getElementById('calculateBtn');
+      const fruitSelect = document.getElementById('fruit-select');
+      const resultDiv = document.getElementById('result');
 
-    function calculateSellPrice() {
-      const fruit = fruitSelect.value;
-      let basePrice = basePrices[fruit];
-      if (basePrice === undefined) {
-        resultDiv.textContent = "Please select a valid fruit.";
-        return;
-      }
-      let totalMultiplier = 1;
-      const modifiers = document.querySelectorAll('.modifiers input[type="checkbox"]:checked');
-      modifiers.forEach((checkbox) => {
-        const val =
+      calculateBtn.addEventListener('click', () => {
+        const fruit = fruitSelect.value;
+        if (!fruit) {
+          resultDiv.textContent = 'Please select a fruit.';
+          return;
+        }
+        const basePrice = basePrices[fruit];
+        if (!basePrice) {
+          resultDiv.textContent = 'Invalid fruit selected.';
+          return;
+        }
+
+        let multiplier = 1;
+        const modifiers = document.querySelectorAll('.modifiers input[type="checkbox"]:checked');
+
+        modifiers.forEach(modifier => {
+          multiplier *= parseFloat(modifier.value);
+        });
+
+        const sellPrice = basePrice * multiplier;
+        const formattedPrice = sellPrice.toLocaleString(undefined, {
+          minimumFractionDigits: 2,
+          maximumFractionDigits: 2
+        });
+
+        resultDiv.textContent = `Sell Price: $${formattedPrice}`;
+      });
+
+      // Clear result if user changes selection
+      fruitSelect.addEventListener('change', () => {
+        resultDiv.textContent = '';
+      });
+      document.querySelectorAll('.modifiers input[type="checkbox"]').forEach(box => {
+        box.addEventListener('change', () => {
+          resultDiv.textContent = '';
+        });
+      });
+    })();
+  </script>
+</body>
+</html>
+
